fix:reports alignment

--- a/styles/report.module.css
+++ b/styles/report.module.css
@@ -56,3 +56,7 @@
     background-color: #4b4d9a !important;
     color: white !important;
 }
+
+.table_header {
+    width: 120px !important;
+}
